--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@ section{
   padding: 15px;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
 }
 
 .results .result img {
@@ -84,4 +85,84 @@ section{
   background: #445565;
   flex: 1 1 100%;
   transition: 0.4s ease-out;
+}
+
+.results .result:hover h3{
+  background: #FFF;
+  color: #223343;
+}
+
+.popup{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #445565;
+
+  overflow-y: scroll;
+}
+
+.popup .content{
+  display: block;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 25px;
+
+  color: #FFF;
+}
+
+.popup .content h2{
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.popup .content h2 span{
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.popup .content .rating{
+  margin-bottom: 30px;
+  color: #FFF;
+}
+
+.popup .content .plot{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px --15px 30px;
+}
+
+.popup .content .plot img {
+  flex: 1 1 50%;
+  max-width: 300px;
+  padding: 0px 15px;
+}
+
+.popup .content .plot p{
+  flex: 1 1 50%;
+  padding: 15px;
+  font-size: 18px;
+}
+
+.popup .content .close{
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: 700;
+
+  background-color: #4484C4;
+  color: #FFF;
+  border-radius: 8px;
+
+  border: none;
+  outline: none;
+  appearance: none;
+  cursor: pointer;
+  transition: 0.4s ease-out;
+}
+
+.popup .content .close:hover{
+  background-color: #223343;
 }
