--- a/src/index.css
+++ b/src/index.css
@@ -57,12 +57,16 @@ section{
   box-shadow: 0px 0px 8px 3px #4483C4;
 }
 
-.not-found{
+.not-found, .loading{
   display: block;
-  width: 100%;
-  padding: 20px 0px 0px 65px;
-
-  color: #FFF;
+  width: 50%;
+  padding: 15px;
+  margin: auto;
+  text-align: center;
+  background-color: rgba(255, 0, 0, 0.3);
+  border: 2px solid red;
+  border-radius: 10px;
+  color: white;
   font-size: 20px;
   font-weight: 300;
 }
@@ -157,14 +161,14 @@ section{
 }
 
 .popup .content .close{
-  display: inline-block;
+  margin: auto;
   padding: 15px 30px;
   font-size: 18px;
   font-weight: 700;
 
   background-color: #4484C4;
   color: #FFF;
-  border-radius: 8px;
+  border-radius: 10px;
 
   border: none;
   outline: none;
